--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <artifactId>selenium-java</artifactId>
     <version>4.1.3</version>
 </dependency>
-
 </dependencies>
+<properties><maven.compiler.source>1.8</maven.compiler.source><maven.compiler.target>1.8</maven.compiler.target></properties>
+
 </project>
